# SoftwareRenderingPipeline

./: .gitignore  CMakeLists.txt  README.md
src/: camera.cpp  camera.hpp  color.hpp  display.cpp  display.hpp  engine.cpp  engine.hpp  fragmentShader.cpp  fragmentShader.hpp  framebuffer.cpp  framebuffer.hpp  gl.hpp  graphicsPipeline.cpp  graphicsPipeline.hpp  ishader.hpp  main.cpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  primitiveAssembler.cpp  primitiveAssembler.hpp  primitiveAssembly.cpp  primitiveAssembly.hpp  program.cpp  program.hpp  rasterizer.cpp  rasterizer.hpp  timer.cpp  timer.hpp  triangle.cpp  triangle.hpp  vertex.cpp  vertex.hpp  vertexShader.cpp  vertexShader.hpp
